--- a/index.html
+++ b/index.html
@@ -1,58 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>Portfolio</title>
-  <style>
-    body {
-      position:relative;
-    }
-    #navbar-example2 {
-      position: fixed;
-    }
-    
-  </style>
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Contact</a>
-          </li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <title>Portfolio</title>
+    <style>
+      body {
+        position: relative;
+      }
+      #navbar-example2 {
+        position: fixed;
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <section>
-    <div class="container mt-10">
-      <h1 class="mt-10">
-        Hey there. I’m Alex.
- I’m a software developer
-      </h1>
-      <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-        don’t hestiate to contact me.</p>
+    </nav>
+    <section class="container mt-5 pt-5">
+      <h1 class="">Hey there. I’m Alex. I’m a software developer</h1>
+      <p>
+        I can help you build a product , feature or website Look through some of
+        my work and experience! If you like what you see and have a project you
+        need coded, don’t hestiate to contact me.
+      </p>
       <ul class="list-group list-group-horizontal justify-content-center">
-        <li class="list-group-item border-0"><a><img src="Icons/github.svg"></a></li>
-        <li class="list-group-item border-0"><a><img src="Icons/Linkedin.svg"></a></li>
-        <li class="list-group-item border-0"><a><img src="Icons/angellist.svg"></a></li>
-        <li class="list-group-item border-0"><a><img src="Icons/twitter.svg"></a></li>
-        <li class="list-group-item border-0"><a><img src="Icons/medium.svg"></a></li>
+        <li class="list-group-item border-0">
+          <a><img src="Icons/github.svg" /></a>
+        </li>
+        <li class="list-group-item border-0">
+          <a><img src="Icons/Linkedin.svg" /></a>
+        </li>
+        <li class="list-group-item border-0">
+          <a><img src="Icons/angellist.svg" /></a>
+        </li>
+        <li class="list-group-item border-0">
+          <a><img src="Icons/twitter.svg" /></a>
+        </li>
+        <li class="list-group-item border-0">
+          <a><img src="Icons/medium.svg" /></a>
+        </li>
       </ul>
-    </div>
-  </section>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    </section>
+    <section class="container">
+      <h2 class="text-center pt-5 mt-5">My Recent Works</h2>
+      <div class="row">
+        <div class="card" style="width: 369px">
+          <div
+            style="width: 345px; height: 252px; background-color: gray"
+          ></div>
+          <div class="card-body">
+            <h5 class="card-title text-center">
+              Multi-Post Stories Gain+Glory
+            </h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
