Update at work card

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <h5 class="card-title text-center">
               Multi-Post Stories Gain+Glory
             </h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+            <p class="badge bg-light text-dark">
+              CSS
             </p>
+            <button type="button" class="btn btn-success">See project</button>
           </div>
         </div>
       </div>
