Update index.html added about section

--- a/index.html
+++ b/index.html
@@ -68,21 +68,272 @@
         </li>
       </ul>
     </section>
-    <section class="container">
-      <h2 class="text-center pt-5 mt-5">My Recent Works</h2>
-      <div class="row">
-        <div class="card" style="width: 369px">
+    <section class="container mb-5">
+      <h2 class="text-center p-5 m-5">My Recent Works</h2>
+      <div
+        class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 justify-content-center"
+      >
+        <div class="card m-2" style="width: 320px">
           <div
-            style="width: 345px; height: 252px; background-color: gray"
+            style="width: 295px; height: 252px; background-color: gray"
           ></div>
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title text-center">
               Multi-Post Stories Gain+Glory
             </h5>
-            <p class="badge bg-light text-dark">
-              CSS
-            </p>
-            <button type="button" class="btn btn-success">See project</button>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-light border text-dark col-auto">
+                Ruby rails
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                CSS
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                HTML
+              </span>
+            </div>
+            <button class="btn btn-success m-3">See Project</button>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 320px">
+          <div
+            style="width: 295px; height: 252px; background-color: gray"
+          ></div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-center">
+              Multi-Post Stories Gain+Glory
+            </h5>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-light border text-dark col-auto">
+                Ruby rails
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                CSS
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                HTML
+              </span>
+            </div>
+            <button class="btn btn-success m-3">See Project</button>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 320px">
+          <div
+            style="width: 295px; height: 252px; background-color: gray"
+          ></div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-center">
+              Multi-Post Stories Gain+Glory
+            </h5>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-light border text-dark col-auto">
+                Ruby rails
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                CSS
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                HTML
+              </span>
+            </div>
+            <button class="btn btn-success m-3">See Project</button>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 320px">
+          <div
+            style="width: 295px; height: 252px; background-color: gray"
+          ></div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-center">
+              Multi-Post Stories Gain+Glory
+            </h5>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-light border text-dark col-auto">
+                Ruby rails
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                CSS
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                HTML
+              </span>
+            </div>
+            <button class="btn btn-success m-3">See Project</button>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 320px">
+          <div
+            style="width: 295px; height: 252px; background-color: gray"
+          ></div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-center">
+              Multi-Post Stories Gain+Glory
+            </h5>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-light border text-dark col-auto">
+                Ruby rails
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                CSS
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                HTML
+              </span>
+            </div>
+            <button class="btn btn-success m-3">See Project</button>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 320px">
+          <div
+            style="width: 295px; height: 252px; background-color: gray"
+          ></div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-center">
+              Multi-Post Stories Gain+Glory
+            </h5>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-light border text-dark col-auto">
+                Ruby rails
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                CSS
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-light border text-dark col-auto">
+                HTML
+              </span>
+            </div>
+            <button class="btn btn-success m-3">See Project</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container text-center m-5 p-5">
+      <h2 class="text-center p-5">About me</h2>
+      <p class="text-center col-8 mx-auto">
+        I can help you build a product , feature or website Look through some of
+        my work and experience! If you like what you see and have a project you
+        need coded, don’t hestiate to contact me.
+      </p>
+      <button class="btn btn-success mx-auto">Get My Resume</button>
+      <div class="row">
+        <div class="card bg-light m-2" style="width: 369px; height: 352px">
+          <div class="card-body">
+            <div class="row p-5 m-2">
+              <div
+                class="d-flex justify-content-center align-items-center rounded-circle bg-white mx-auto"
+                style="width: 80px; height: 80px"
+              >
+                <img
+                  src="./Icons/globe.svg"
+                  alt="globe icon"
+                  height="48px"
+                  width="48px"
+                />
+              </div>
+            </div>
+            <h3 class="text-dark mb-4">Languages</h3>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-white text-success p-3 col-auto">
+                Javascript
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Ruby
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                HTML
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                CSS
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-light m-2" style="width: 369px; height: 352px">
+          <div class="card-body">
+            <div class="row p-5 m-2">
+              <div
+                class="d-flex justify-content-center align-items-center rounded-circle bg-white mx-auto"
+                style="width: 80px; height: 80px"
+              >
+                <img
+                  src="./Icons/globe.svg"
+                  alt="globe icon"
+                  height="48px"
+                  width="48px"
+                />
+              </div>
+            </div>
+            <h3 class="text-dark mb-4">Frameworks</h3>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-white text-success p-3 col-auto">
+                Bootstrap
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Ruby on rails
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                RSpec
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Capybara
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Selenium
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-light m-2" style="width: 369px; height: 352px">
+          <div class="card-body">
+            <div class="row p-5 m-2">
+              <div
+                class="d-flex justify-content-center align-items-center rounded-circle bg-white mx-auto"
+                style="width: 80px; height: 80px"
+              >
+                <img
+                  src="./Icons/globe.svg"
+                  alt="globe icon"
+                  height="48px"
+                  width="48px"
+                />
+              </div>
+            </div>
+            <h3 class="text-dark mb-4">Skills</h3>
+            <div class="row justify-content-evenly">
+              <span class="badge bg-white text-success p-3 col-auto">
+                CodeKit
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Github
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Codepen
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Gitlab
+              </span>
+              <span class="badge bg-white text-success p-3 col-auto">
+                Terminal
+              </span>
+            </div>
           </div>
         </div>
       </div>
