--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
       </div>
     </section>
-    <section class="container text-center m-5 p-5">
+    <section class="container text-center mb-5 ">
       <h2 class="text-center p-5">About me</h2>
       <p class="text-center col-8 mx-auto">
         I can help you build a product , feature or website Look through some of
@@ -233,10 +233,10 @@
         need coded, don’t hestiate to contact me.
       </p>
       <button class="btn btn-success mx-auto">Get My Resume</button>
-      <div class="row">
-        <div class="card bg-light m-2" style="width: 369px; height: 352px">
+      <div class="row row-cols-sm-1 row-cols-md-3 row-cols-lg-3 justify-content-center mt-4">
+        <div class="card bg-light m-2 " style="width: 320px; height: 352px">
           <div class="card-body">
-            <div class="row p-5 m-2">
+            <div class="row p-4 m-2">
               <div
                 class="d-flex justify-content-center align-items-center rounded-circle bg-white mx-auto"
                 style="width: 80px; height: 80px"
@@ -266,15 +266,15 @@
             </div>
           </div>
         </div>
-        <div class="card bg-light m-2" style="width: 369px; height: 352px">
+        <div class="card bg-light m-2" style="width: 320px; height: 352px">
           <div class="card-body">
-            <div class="row p-5 m-2">
+            <div class="row p-4 m-2">
               <div
                 class="d-flex justify-content-center align-items-center rounded-circle bg-white mx-auto"
                 style="width: 80px; height: 80px"
               >
                 <img
-                  src="./Icons/globe.svg"
+                  src="Icons/boxes.svg"
                   alt="globe icon"
                   height="48px"
                   width="48px"
@@ -283,33 +283,33 @@
             </div>
             <h3 class="text-dark mb-4">Frameworks</h3>
             <div class="row justify-content-evenly">
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Bootstrap
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Ruby on rails
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 RSpec
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Capybara
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Selenium
               </span>
             </div>
           </div>
         </div>
-        <div class="card bg-light m-2" style="width: 369px; height: 352px">
+        <div class="card bg-light m-2" style="width: 320px; height: 352px">
           <div class="card-body">
-            <div class="row p-5 m-2">
+            <div class="row p-4 m-2">
               <div
                 class="d-flex justify-content-center align-items-center rounded-circle bg-white mx-auto"
                 style="width: 80px; height: 80px"
               >
                 <img
-                  src="./Icons/globe.svg"
+                  src="Icons/lightning.svg"
                   alt="globe icon"
                   height="48px"
                   width="48px"
@@ -318,19 +318,19 @@
             </div>
             <h3 class="text-dark mb-4">Skills</h3>
             <div class="row justify-content-evenly">
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 CodeKit
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Github
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Codepen
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Gitlab
               </span>
-              <span class="badge bg-white text-success p-3 col-auto">
+              <span class="badge bg-white text-success p-3 col-auto m-1">
                 Terminal
               </span>
             </div>
