--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
       body {
         position: relative;
       }
+      
       #navbar-example2 {
         position: fixed;
       }
+
+      @media screen and (max-width:768px) {
+        #form {
+          text-align: center; 
+        }
+      }
+
     </style>
   </head>
   <body>
@@ -43,9 +51,9 @@
         </div>
       </div>
     </nav>
-    <section class="container mt-5 pt-5">
-      <h1 class="">Hey there. I’m Alex. I’m a software developer</h1>
-      <p>
+    <section class="container mt-5 pt-5 text-center">
+      <h1 class="">Hey there. I’m Alex.<br> I’m a software developer</h1>
+      <p class="col-md-8 mx-auto">
         I can help you build a product , feature or website Look through some of
         my work and experience! If you like what you see and have a project you
         need coded, don’t hestiate to contact me.
@@ -335,6 +343,30 @@
               </span>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="container mb-5">
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+        </div>
+        <div class="col-12 col-md-8">
+          <form id="form">
+            <div class="mb-1">
+              <label for="exampleFormControlInput1" class="form-label" ></label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Full name">
+            </div>
+            <div class="mb-1">
+              <label for="exampleFormControlInput1" class="form-label"></label>
+              <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="Email adress">
+            </div>
+            <div class="mb-1">
+              <label for="exampleFormControlTextarea1" class="form-label"></label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Type something</textarea>
+            </div>
+            <button class="btn btn-success text-white mt-3 mx-auto">Get in touch</button>
+          </form>
         </div>
       </div>
     </section>
