Add arrow image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       body {
         position: relative;
       }
-      
+
       #navbar-example2 {
         position: fixed;
       }
@@ -75,6 +75,7 @@
           <a><img src="Icons/medium.svg" /></a>
         </li>
       </ul>
+      <img class="mt-5" src="Icons/Disabled.svg" alt="arrow">
     </section>
     <section class="container mb-5">
       <h2 class="text-center p-5 m-5">My Recent Works</h2>
